<resources>
    <string name="app_name">MyTest2</string>
    <string name="refresh_btn">Refresh scanners</string>
    <string name="start_capture_btn">Start</string>
    <string name="stop_capture_btn">Stop</string>
    <string name="open_scanner_btn">Open</string>
    <string name="close_scanner_btn">Close</string>
    <string name="logo_img">Logo</string>
    <string name="preview_image">Preview</string>
    <string name="email_image">E-mail image</string>
    <string name="enlarge">Enlarge</string>
    <string name="device_count_name"># SCANNERS</string>
    <string name="device_count_default">n/a</string>
    <string name="status_name">NFIQ</string>
    <string name="status_default">n/a</string>
    <string name="frame_time_name">FRAME TIME</string>
    <string name="frame_time_default">n/a</string>
    <string name="usb_device_name">Devices : </string>
    <string name="capture_seq_name">Capture : </string>
</resources>
